@@ -12,9 +12,8 @@ from fastflix.models.config import Config, MissingFF
 from fastflix.models.fastflix import FastFlix
 from fastflix.models.fastflix_app import FastFlixApp
 from fastflix.program_downloads import ask_for_ffmpeg, latest_ffmpeg
-from fastflix.resources import main_icon, breeze_styles_path, get_bool_env
-from fastflix.shared import file_date, message, latest_fastflix
-from fastflix.version import __version__
+from fastflix.resources import main_icon, breeze_styles_path
+from fastflix.shared import file_date, message, latest_fastflix, DEVMODE
 from fastflix.widgets.container import Container
 from fastflix.widgets.progress_bar import ProgressBar, Task
 
@@ -96,30 +95,41 @@ def init_encoders(app: FastFlixApp, **_):
         copy_plugin,
     ]
 
-    if app.fastflix.config.qsvencc:
-        if "H.265/HEVC" in app.fastflix.config.qsvencc_encoders:
-            encoders.insert(1, qsvencc_plugin)
-        if "AV1" in app.fastflix.config.qsvencc_encoders:
-            encoders.insert(encoders.index(av1_plugin), qsvencc_av1_plugin)
-        if "H.264/AVC" in app.fastflix.config.qsvencc_encoders:
-            encoders.insert(encoders.index(avc_plugin), qsvencc_avc_plugin)
+    if DEVMODE:
+        encoders.insert(1, qsvencc_plugin)
+        encoders.insert(encoders.index(av1_plugin), qsvencc_av1_plugin)
+        encoders.insert(encoders.index(avc_plugin), qsvencc_avc_plugin)
+        encoders.insert(1, nvencc_plugin)
+        encoders.insert(encoders.index(av1_plugin), nvencc_av1_plugin)
+        encoders.insert(encoders.index(avc_plugin), nvencc_avc_plugin)
+        encoders.insert(1, vceencc_hevc_plugin)
+        encoders.insert(encoders.index(av1_plugin), vceencc_av1_plugin)
+        encoders.insert(encoders.index(avc_plugin), vceencc_avc_plugin)
+    else:
+        if app.fastflix.config.qsvencc:
+            if "H.265/HEVC" in app.fastflix.config.qsvencc_encoders:
+                encoders.insert(1, qsvencc_plugin)
+            if "AV1" in app.fastflix.config.qsvencc_encoders:
+                encoders.insert(encoders.index(av1_plugin), qsvencc_av1_plugin)
+            if "H.264/AVC" in app.fastflix.config.qsvencc_encoders:
+                encoders.insert(encoders.index(avc_plugin), qsvencc_avc_plugin)
 
-    if app.fastflix.config.nvencc:
-        if "H.265/HEVC" in app.fastflix.config.nvencc_encoders:
-            encoders.insert(1, nvencc_plugin)
-        if "AV1" in app.fastflix.config.nvencc_encoders:
-            encoders.insert(encoders.index(av1_plugin), nvencc_av1_plugin)
-        if "H.264/AVC" in app.fastflix.config.nvencc_encoders:
-            encoders.insert(encoders.index(avc_plugin), nvencc_avc_plugin)
+        if app.fastflix.config.nvencc:
+            if "H.265/HEVC" in app.fastflix.config.nvencc_encoders:
+                encoders.insert(1, nvencc_plugin)
+            if "AV1" in app.fastflix.config.nvencc_encoders:
+                encoders.insert(encoders.index(av1_plugin), nvencc_av1_plugin)
+            if "H.264/AVC" in app.fastflix.config.nvencc_encoders:
+                encoders.insert(encoders.index(avc_plugin), nvencc_avc_plugin)
 
-    if app.fastflix.config.vceencc:
-        if reusables.win_based and "H.265/HEVC" in app.fastflix.config.vceencc_encoders:
-            # HEVC AMF support only works on windows currently
-            encoders.insert(1, vceencc_hevc_plugin)
-        if "AV1" in app.fastflix.config.vceencc_encoders:
-            encoders.insert(encoders.index(av1_plugin), vceencc_av1_plugin)
-        if "H.264/AVC" in app.fastflix.config.vceencc_encoders:
-            encoders.insert(encoders.index(avc_plugin), vceencc_avc_plugin)
+        if app.fastflix.config.vceencc:
+            if reusables.win_based and "H.265/HEVC" in app.fastflix.config.vceencc_encoders:
+                # HEVC AMF support only works on windows currently
+                encoders.insert(1, vceencc_hevc_plugin)
+            if "AV1" in app.fastflix.config.vceencc_encoders:
+                encoders.insert(encoders.index(av1_plugin), vceencc_av1_plugin)
+            if "H.264/AVC" in app.fastflix.config.vceencc_encoders:
+                encoders.insert(encoders.index(avc_plugin), vceencc_avc_plugin)
 
     app.fastflix.encoders = {
         encoder.name: encoder
