@@ -60,6 +60,8 @@ def build(fastflix: FastFlix):
     if settings.profile.lower() != "auto":
         profile_opt = f"--profile {settings.profile}"
 
+    source_fps = f"--fps {video.video_settings.source_fps}" if video.video_settings.source_fps else ""
+
     command = [
         f'"{clean_file_string(fastflix.config.vceencc)}"',
         ("--avhw" if settings.decoder == "Hardware" else "--avsw"),
@@ -70,6 +72,7 @@ def build(fastflix: FastFlix):
         (f"--video-streamid {stream_id}" if stream_id else ""),
         seek,
         seekto,
+        source_fps,
         (f"--vpp-rotate {video.video_settings.rotate * 90}" if video.video_settings.rotate else ""),
         transform,
         (f'--output-res {video.scale.replace(":", "x")}' if video.scale else ""),
